--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   sqflite: ^2.0.2+1
   connectivity_plus: ^2.3.0
   crypto: ^3.0.2
+  firebase_core: ^1.17.1
+  cloud_firestore: ^3.1.17
+  cloud_firestore_web: ^2.6.16
   # shared_preferences: ^2.0.15
 
 dev_dependencies:
