--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
   cloud_firestore_web: ^2.6.16
-  # shared_preferences: ^2.0.15
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
