--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   cloud_firestore_web: ^2.6.16
   shimmer: ^2.0.0
+  google_mobile_ads: ^1.2.0
 
 dev_dependencies:
   flutter_test:
